<resources>
    <string name="app_name">Dice</string>
    <string name="title">DICE CRAPS</string>
    <string name="about">About</string>
    <string name="start">Begin Game</string>
    <string name="point">Your Point</string>
    <string name="roll">Roll the Dice</string>
    <string name="win">You Win !!</string>
    <string name="loose">You loose</string>
    <string name="go">Continue Playing</string>
    <string name="info_heading">About The Game</string>
    <string name="info">Click on the ROLL button to begin rolling the dice, when the dice come to rest,if the sum of the two faces is 7 or 11 , you WIN . Yay!! .But if the result is 2,3 or 12 you LOOSE. If the
    sum is 4,5,6,8,9 or 10 you can continue playing till you get a 7,which means you loose , you WIN if you roll the same number as the first throw. The minimum amount to bet is $50 until u bet , you will not be able to start rolling.
        if you win Your money DOUBLES !! and incase you loose you LOOSE it all .. , and you can continue betting with the money you won or choose a minimum of $50 from it .


    GOOD LUCK ROLLING !!</string>
</resources>